[ADD] detection cascade and invalidation fields: added yaml

--- a/smile_test/test/fields_view_get_test.yml
+++ b/smile_test/test/fields_view_get_test.yml
@@ -1,5 +1,5 @@
 -
-  I get the first contract of stinsonbarney
+  I test all fields_view_get
 -
   !python {model: ir.model}: |
     model_ids = self.search(cr, uid, [], context)
