[FIX] Explicit error message on print or pdb

--- a/smile_test/test/detect_cascade_invalidation.yml
+++ b/smile_test/test/detect_cascade_invalidation.yml
@@ -6,5 +6,5 @@
     if result:
         err_details=""
         for res in result:
-            err_details = err_details + "\n".join(["Model: %s, field %s, carried by %s." % (res, tup[1], tup[0]) for tup in result[res]])
-        raise Exception('Error in detect_cascade_on_delete_on_invalidation: %s' % err_details)
+            err_details = err_details + '\n' + "\n".join(["Field %s, carried by %s, invalidated by model: %s, which can be deleted by cascade." % (tup[1], tup[0], res) for tup in result[res]])
+        raise Exception('Error in detect_cascade_on_delete_on_invalidation: \n %s' % err_details)
