--- a/smile_test/test/general_read_test.yml
+++ b/smile_test/test/general_read_test.yml
@@ -6,6 +6,7 @@
     errors = []
     for model in self.browse(cr, uid, model_ids, context):
         model_obj = self.pool.get(model.model)
+        cr.execute('SAVEPOINT general_read_test')
         try:
             test_type = 'count'
             count = model_obj.search(cr, uid, [], context=context, count=True)
@@ -21,6 +22,7 @@
         except Exception, e:
             err_info = (model.model, test_type, repr(e))
             errors.append(err_info)
+            cr.execute('ROLLBACK TO general_read_test')
     if errors:
         err_details = "\n".join(["(%s, %s): %s" % (model, view_type, err) for model, view_type, err in errors])
         raise Exception('Error in search/read for model/test and error:\n%s' % err_details)
