[IMP] ignore buggy openerp models

--- a/smile_test/test/general_read_test.yml
+++ b/smile_test/test/general_read_test.yml
@@ -5,6 +5,9 @@
     model_ids = self.search(cr, uid, [], context)
     errors = []
     for model in self.browse(cr, uid, model_ids, context):
+        if model.model in ['hr.expense.report', 'report.stock.inventory']:
+            # Ignore buggy models from server and official addons
+            continue
         model_obj = self.pool.get(model.model)
         cr.execute('SAVEPOINT general_read_test')
         try:
