--- a/smile_test/test/general_read_test.yml
+++ b/smile_test/test/general_read_test.yml
@@ -2,10 +2,12 @@
   I test all search and reads
 -
   !python {model: ir.model}: |
+    ignored_models = ['hr.expense.report', 'report.stock.inventory', 'board.board',
+                     'ir.needaction_mixin', 'mail.favorite', 'mail.thread', 'mail.vote']
     model_ids = self.search(cr, uid, [], context)
     errors = []
     for model in self.browse(cr, uid, model_ids, context):
-        if model.model in ['hr.expense.report', 'report.stock.inventory']:
+        if model.model in ignored_models:
             # Ignore buggy models from server and official addons
             continue
         model_obj = self.pool.get(model.model)
