--- a/smile_test/test/general_read_test.yml
+++ b/smile_test/test/general_read_test.yml
@@ -24,6 +24,8 @@
                 res_ids = model_obj.search(cr, uid, [], context=context)
                 test_type = 'read_all'
                 res_infos = model_obj.read(cr, uid, res_ids, [], context)
+                test_type = 'name_get'
+                res_infos = model_obj.name_get(cr, uid, res_ids, context)
         except Exception, e:
             err_info = (model.model, test_type, repr(e))
             errors.append(err_info)
