--- a/smile_test/test/general_read_test.yml
+++ b/smile_test/test/general_read_test.yml
@@ -3,7 +3,8 @@
 -
   !python {model: ir.model}: |
     ignored_models = ['hr.expense.report', 'report.stock.inventory', 'board.board',
-                     'ir.needaction_mixin', 'mail.favorite', 'mail.thread', 'mail.vote']
+                     'ir.needaction_mixin', 'mail.favorite', 'mail.thread', 'mail.vote',
+                     'ir.config_parameter', 'ir.server.object.lines', 'res.widget.user']
     model_ids = self.search(cr, uid, [], context)
     errors = []
     for model in self.browse(cr, uid, model_ids, context):
